Improving logic for file system.

--- a/RemoteController/RemoteController.Service/Web/Styles/styles.css
+++ b/RemoteController/RemoteController.Service/Web/Styles/styles.css
@@ -31,4 +31,14 @@
 
 #folders a, #files a {
     display: block;
+    cursor: pointer;
 }
+
+#paths a {
+    cursor: pointer;
+}
+
+    #paths a + a:before {
+        content: '\\';
+        margin: 0 4px;
+    }
