--- a/RemoteController/RemoteController.Client/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -23,24 +23,20 @@
           <li
             class="nav-item"
             [routerLinkActive]="['link-active']"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
+            [routerLinkActiveOptions]="{ exact: true }">
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']"
-              >Counter</a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/counter']">Counter</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-            >Fetch data</a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/page/123']"
-            >Page 123</a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/create']">Create</a>
+          </li>
+          <li *ngFor="let p of pages" class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/p', p.name]">Page {{p.title}}</a>
           </li>
         </ul>
       </div>
