--- a/RemoteController/RemoteController.Client/ClientApp/src/app/app.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/app.component.html
@@ -1,5 +1,5 @@
 <body>
-  <app-nav-menu></app-nav-menu>
+  <rc-nav-menu></rc-nav-menu>
   <div class="container">
     <router-outlet></router-outlet>
   </div>
