Fixed rename of components.

--- a/RemoteController/RemoteController.Client/ClientApp/src/app/counter/counter.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/counter/counter.component.html
@@ -5,4 +5,4 @@
 <p aria-live="polite">Current count: <strong>{{ currentCount }}</strong></p>
 
 <button class="btn btn-primary" (click)="incrementCounter()">Increment</button>
-<send-key></send-key>
+<rc-send-key></rc-send-key>
