--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/page/page.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/page/page.component.html
@@ -1,13 +1,6 @@
 <h3>{{details.title}}!</h3>
 
-<<ng-template rcControlHost></ng-template>
+<ng-template rcControlHost></ng-template>
 
-
-<rc-key-control key='1' col=1></rc-key-control>
-<rc-key-control key='2' col=2></rc-key-control>
-<rc-key-control key='3' col=3></rc-key-control>
-<rc-key-control key='4' col=4></rc-key-control>
-<rc-key-control key='4' col=4></rc-key-control>
-<rc-key-control key='4' col=4></rc-key-control>
-<rc-key-control key='4' col=4></rc-key-control>
+<div>ToDo list:</div>
 <rc-volume-control></rc-volume-control>
