--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/page/page.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/page/page.component.html
@@ -3,4 +3,8 @@
 <ng-template rcControlHost></ng-template>
 
 <div>ToDo list:</div>
-<rc-volume-control></rc-volume-control>
+<ul>
+  <li>File system</li>
+  <li>Output</li>
+  <li><rc-volume-control></rc-volume-control></li>
+</ul>
