Improved significantly volume component.

--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/page/page.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/page/page.component.html
@@ -7,5 +7,5 @@
   <li>File system</li>
   <li>Output</li>
   <li>Command</li>
-  <li><rc-volume-control></rc-volume-control></li>
+  <li>Volume></li>
 </ul>
