Added tooltip to value control.

--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/volume-control/volume-control.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/volume-control/volume-control.component.html
@@ -1,6 +1,7 @@
 <input
   #inp (change)='this.setVolume($event.target.value)'
   [attr.disabled]="isEnabled ? null : ''"
+  [attr.title]='input.nativeElement.value'
   [ngClass]="colClass"
   class="custom-range"
   type="range"
