Reduced logging by WebSocket service.

--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/page/page.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/page/page.component.html
@@ -2,9 +2,8 @@
 
 <ng-template rcControlHost></ng-template>
 
-<div>ToDo list:</div>
+<h4>ToDo list:</h4>
 <ul>
-  <li>File system</li>
   <li>Output</li>
   <li>Command</li>
 </ul>
