--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/key-control/key-control.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/key-control/key-control.component.html
@@ -1,3 +1,7 @@
 <button
+  title="{{text}}"
   class="btn btn-light"
-  [ngClass]="colClass">{{key.toUpperCase()}}</button>
+  [ngClass]="colClass">
+  <fa-icon *ngIf="!!icon" [icon]="icon" class="fa-3x"></fa-icon>
+  <span *ngIf="!icon">{{key.toUpperCase()}}</span>
+</button>
