--- a/RemoteController/RemoteController.Client/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">RemoteController.Client</a>
+      <a class="navbar-brand" (click)='this.connect()' style.background="{{isConnected ? 'lightgreen' : 'red'}}">Status: {{isConnected ? 'Connected' : "Closed"}}</a>
       <button
         class="navbar-toggler"
         type="button"
