--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/page/page.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/page/page.component.html
@@ -1,4 +1,11 @@
-<h3>{{details.title}}!</h3>
+<div class="d-flex bd-highlight">
+    <div class="p-2 w-100 bd-highlight">
+      <h3>{{details.title}}</h3>
+    </div>
+    <div class="p-2 flex-shrink-1 bd-highlight">
+        <a [routerLink]="['/edit', name]" class="align-middle">Edit</a>
+    </div>
+  </div>
 
 <ng-template rcControlHost></ng-template>
 
