--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/pages/page-editor/page-editor.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/pages/page-editor/page-editor.component.html
@@ -1,8 +1,3 @@
-
-<rc-control-editor
-*ngIf="!!editControl"
-[(control)]='editControl'></rc-control-editor>
-
 <div *ngIf="!editControl">
     <p>page-editor works!</p>
 
@@ -11,6 +6,6 @@
       class="btn"
       (click)="editControl = c;"
       >
-      {{c.type}}-{{c.text}}
+      {{c.name}}
     </button>
 </div>
