--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/pages/page/page.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/pages/page/page.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex bd-highlight">
     <div class="p-2 w-100 bd-highlight">
-      <h3>{{details.title}}</h3>
+      <h3>{{details?.title}}</h3>
     </div>
     <div class="p-2 flex-shrink-1 bd-highlight">
         <a [routerLink]="['/edit', name]" class="align-middle">Edit</a>
