--- a/RemoteController/RemoteController.Client/ClientApp/src/app/app.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/app.component.html
@@ -1,6 +1,8 @@
-<body>
-  <rc-nav-menu></rc-nav-menu>
-  <div class="container">
-    <router-outlet></router-outlet>
-  </div>
-</body>
+<section>
+<header>
+  <rc-nav-menu class="rc-flex-header"></rc-nav-menu>
+</header>
+<div class="content">
+  <router-outlet></router-outlet>
+</div>
+</section>
