--- a/RemoteController/RemoteController.Client/ClientApp/src/app/app.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/app.component.html
@@ -1,8 +1,8 @@
 <section>
-<header>
-  <rc-nav-menu class="rc-flex-header"></rc-nav-menu>
-</header>
-<div class="content">
-  <router-outlet></router-outlet>
-</div>
+  <header>
+    <rc-nav-menu class="rc-flex-header"></rc-nav-menu>
+  </header>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
 </section>
