Created column editor.

--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/control-editor/control-editor.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/control-editor/control-editor.component.html
@@ -1,6 +1,7 @@
 <section>
   <main>
     <p>control-editor works! {{control.name}}</p>
+    <rc-control-column-editor [(value)]='control.col' ></rc-control-column-editor>
   </main>
   <footer>
     <div class="container-fluid">
