Created directive for auto-focus behavior.

--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/control-column-editor/control-column-editor.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/control-column-editor/control-column-editor.component.html
@@ -1,6 +1,7 @@
 <div class="fomr-group">
   <label >Columns</label>
   <input type="number"
+    autofocus
     class="form-control"
     [value]='value'
     (input)='value = $event.target.value'
