--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/page-create/page-create.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/page-create/page-create.component.html
@@ -1,7 +1,7 @@
 <!-- <h3>Create page</h3> -->
 
 <div class="form-group">
-  <input [(ngModel)]="title" (keydown.enter)="create()" placeholder="Title" class="form-control form-control-lg" />
+  <input [(ngModel)]="title" (keydown.enter)="create()" autofocus placeholder="Title" class="form-control form-control-lg" />
 </div>
 
 <div>
