--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/page-editor/page-editor.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/page-editor/page-editor.component.html
@@ -1,7 +1,7 @@
 <section *ngIf="!editControl">
   <main class="container">
     <div class="form-group">
-      <input [(ngModel)]="title" placeholder="Title" class="form-control form-control-lg" />
+      <input [(ngModel)]="title" autofocus placeholder="Title" class="form-control form-control-lg" />
     </div>
     <button
       *ngFor="let c of controls"
