--- a/RemoteController/RemoteController.Client/ClientApp/src/file-system/file-system-component/file-system.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/file-system/file-system-component/file-system.component.html
@@ -1,18 +1,22 @@
-<div #p id="paths" id="paths">
-  <a *ngFor="let x of paths" (click)='goToPath(x.url)'>{{x.title}}</a>
-</div>
-<div class="border"></div>
-<div id="folders">
-  <a *ngFor="let x of folders" (click)='goToPath(x.url)'>
-    <fa-icon [icon]='iconFolder'></fa-icon>
-    {{x.title}}
-  </a>
-</div>
-<div class="border"></div>
-<div id="files">
+<div
+  [ngClass]="col | columnClassName"
+  >
+  <div #p id="paths" id="paths">
+    <a *ngFor="let x of paths" (click)='goToPath(x.url)'>{{x.title}}</a>
+  </div>
+  <div class="border"></div>
+  <div id="folders">
+    <a *ngFor="let x of folders" (click)='goToPath(x.url)'>
+      <fa-icon [icon]='iconFolder'></fa-icon>
+      {{x.title}}
+    </a>
+  </div>
+  <div class="border"></div>
+  <div id="files">
     <a *ngFor="let x of files" (click)='exec(x.url)'>
       <fa-icon [icon]='iconFile'></fa-icon>
       {{x.title}}
     </a>
+  </div>
+  <div class="border"></div>
 </div>
-<div class="border"></div>
