--- a/RemoteController/RemoteController.Client/ClientApp/src/volume/volume-component/volume.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/volume/volume-component/volume.component.html
@@ -2,7 +2,7 @@
   #inp (change)='this.setVolume($event.target.value)'
   [attr.disabled]="isEnabled ? null : ''"
   [attr.title]='input.nativeElement.value'
-  [ngClass]="colClass"
+  [ngClass]="col | columnClassName"
   class="custom-range"
   type="range"
   min="0"
