Fixing control editing.

--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/control-editor/control-editor.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/control-editor/control-editor.component.html
@@ -5,11 +5,11 @@
   </main>
   <footer>
     <div class="container-fluid">
-      <button class="btn btn-lg btn-secondary col-5" (click)="submit()">
+      <button class="btn btn-lg btn-secondary col-5" (click)="submit(false)">
         Cancel
       </button>
       <span class="d-inline-block col-2"></span>
-      <button class="btn btn-lg btn-primary col-5" (click)="submit(data)">
+      <button class="btn btn-lg btn-primary col-5" (click)="submit(true)">
         Save
       </button>
     </div>
