Implemented wokring control creator.

--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/control-editor/control-editor.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/control-editor/control-editor.component.html
@@ -5,14 +5,21 @@
   </main>
   <footer>
     <div class="container-fluid">
-      <button class="btn btn-lg btn-secondary col-4" (click)="submit(false)">
+      <button
+        [class.col-4]="showDelete"
+        [class.col-6]="!showDelete"
+        class="btn btn-lg btn-secondary"
+        (click)="submit(false)">
         Cancel
       </button>
-      <button class="btn btn-lg btn-danger col-4" (click)='deleteAction()'>
+      <button *ngIf="showDelete" class="btn btn-lg btn-danger col-4" (click)='deleteAction()'>
         Delete
       </button>
-      <button class="btn btn-lg btn-primary col-4" (click)="submit(true)">
-        Save
+      <button
+        [class.col-4]="showDelete"
+        [class.col-6]="!showDelete"
+        class="btn btn-lg btn-primary" (click)="submit(true)">
+        {{textSave}}
       </button>
     </div>
   </footer>
