--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/page-editor/page-editor.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/page-editor/page-editor.component.html
@@ -28,4 +28,6 @@
 
 <rc-create-control
   [hidden]="!showCreateControl"
+  (cancel)="hideCreateControl()"
+  (submit)="createControl($event)"
   ></rc-create-control>
