Fixed bug with not setting text for key.

--- a/RemoteController/RemoteController.Client/ClientApp/src/key/key-editor-component/key-editor.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/key/key-editor-component/key-editor.component.html
@@ -1,5 +1,9 @@
 <rc-control-column-editor *ngIf="!!data" [(value)]="data.col"></rc-control-column-editor>
 <p>key-editor works!</p>
-<select [(ngModel)]="data.data" *ngIf="!!data" class="form-control">
-  <option *ngFor="let x of keyCodes" [ngValue]='x.value'>{{x.name}}</option>
+<select
+  *ngIf="!!data"
+  [ngModel]="key"
+  (ngModelChange)="onKeyChanged($event)"
+  class="form-control">
+  <option *ngFor="let x of keyCodes" [ngValue]='x'>{{x.name}}</option>
 </select>
