implemented control view.

--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/page/page.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/page/page.component.html
@@ -7,4 +7,7 @@
     </div>
   </div>
 
-<ng-template rcControlHost></ng-template>
+<rc-control-view
+  *ngFor="let item of details.controls"
+  [control]="item"
+  ></rc-control-view>
