--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/control-editor-view/control-editor-view.component.css
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/control-editor-view/control-editor-view.component.css
@@ -1,15 +1,20 @@
-.editor {
+:host {
+  display: inline-block;
+}
+:host(.editor) {
   position: relative;
 }
 
-.editor > .overlay {
+:host(.editor) > .overlay {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  opacity: 0.3;
+  opacity: 0.25;
+  height: 100%;
+  width: 100%;
 }
-.editor > .overlay:hover {
-  opacity: .75;
+:host(.editor) > .overlay:hover {
+  opacity: 0.85;
 }
