--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/page-editor/page-editor.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/page-editor/page-editor.component.html
@@ -7,7 +7,7 @@
       <rc-control-editor-view
         *ngFor="let c of controls"
         [control]="c"
-        (click)="openControlEditor(c)"
+        (openEditor)="openControlEditor(c)"
         ></rc-control-editor-view>
     </div>
   </main>
