--- a/RemoteController/RemoteController.Client/ClientApp/src/file-system/file-system-component/file-system.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/file-system/file-system-component/file-system.component.html
@@ -1,6 +1,6 @@
 <div
   class='root'
-  [ngClass]="col | columnClassName"
+  [ngClass]="forceFullWidth ? 'col-12' : col | columnClassName"
   [style.maxHeight.px]="maxHeight > 0 ? maxHeight : ''"
   >
 
