--- a/RemoteController/RemoteController.Client/ClientApp/src/key/key-component/key.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/key/key-component/key.component.html
@@ -1,7 +1,7 @@
 <button
   title="{{title}}"
   class="btn btn-light"
-  [ngClass]="col | columnClassName">
+  [ngClass]="forceFullWidth ? 'col-12' : col | columnClassName">
   <fa-icon *ngIf="!!icon" [icon]="icon" class="fa-3x"></fa-icon>
   <span *ngIf="!icon">{{title.toUpperCase()}}</span>
 </button>
