--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/page/page.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/page/page.component.html
@@ -10,4 +10,5 @@
 <rc-control-view
   *ngFor="let item of details.controls"
   [control]="item"
+  [ngClass]='item.col | columnClassName'
   ></rc-control-view>
