--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/control-editor-view/control-editor-view.component.css
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/control-editor-view/control-editor-view.component.css
@@ -1,11 +1,9 @@
 :host {
   display: inline-block;
-}
-:host(.editor) {
   position: relative;
 }
 
-:host(.editor) > .overlay {
+ .overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -15,6 +13,7 @@
   height: 100%;
   width: 100%;
 }
-:host(.editor) > .overlay:hover {
+
+.overlay:hover {
   opacity: 0.85;
 }
