Added filter support. needs some improvements.

--- a/RemoteController/RemoteController.Client/ClientApp/src/core/components/icon-selector/icon-selector.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/core/components/icon-selector/icon-selector.component.html
@@ -1,8 +1,9 @@
 <p>icon-selector works!</p>
-<input type="text" placeholder="Search" />
+<input type="text" placeholder="Search" [(ngModel)]="filter" />
+{{filter}}
 <div>
   <fa-icon
-  *ngFor="let item of icons"
+  *ngFor="let item of icons | icons_filter: filter"
   [icon]='item'
   size="3x"></fa-icon>
 </div>
